# triqs

./: CMakeLists.txt
c++/triqs/: CMakeLists.txt  arrays.hpp  statistics.hpp
c++/triqs/atom_diag/: atom_diag.hpp
c++/triqs/det_manip/: det_manip.hpp
c++/triqs/gfs/: evaluator.hpp  make_gf.hpp
c++/triqs/hilbert_space/: state.hpp
c++/triqs/lattice/: bravais_lattice.cpp  bravais_lattice.hpp  brillouin_zone.cpp  tight_binding.cpp  tight_binding.hpp
c++/triqs/mesh/: prod.hpp
c++/triqs/operators/: many_body_operator.cpp
c++/triqs/statistics/: histograms.hpp
c++/triqs/test_tools/: arrays.hpp
c++/triqs/utility/: arithmetic_ops_by_cast.hpp  exceptions.hpp  first_include.hpp  index_generator.hpp  kronecker.hpp  macros.hpp  tuple_tools.hpp
cpp2py/cmake/: FindPython.cmake
cpp2py/cpp2rst/: cpp2rst.py  processed_doc.py  renderers.py  synopsis.py
doc/: CMakeLists.txt  install.rst
h5/: CMakeLists.txt  array_interface.cpp  array_interface.hpp  file.cpp  file.hpp  generic.hpp  group.cpp  group.hpp  h5object.cpp  h5object.hpp  python.cpp  python.hpp  scalar.hpp  scheme.hpp  string.cpp  string.hpp  type_correspondance.cpp  type_correspondance.hpp  vector.cpp  vector.hpp
h5/stl/: string.hpp  vector.hpp
pytriqs/gf/: gf.py  mesh_point.py  meshes_desc.py
test/: CMakeLists.txt
test/clef/: CMakeLists.txt  common.hpp  test1.cpp
triqs/arrays/: algorithms.hpp  array.hpp  cache.hpp  matrix.hpp  vector.hpp
triqs/clef/: clef.hpp  io.hpp  sum.hpp
triqs/mc_tools/: mc_generic.hpp
triqs/test_tools/: arrays.hpp
triqs/utility/: first_include.hpp  tuple_tools.hpp
(+88 files in other folders)
